tests/baselines/reference/chainedAssignment3.errors.txt
tests/cases/compiler/chainedAssignment3.ts(15,1): error TS2322: Type 'string' is not assignable to type 'number'.
tests/cases/compiler/chainedAssignment3.ts(18,1): error TS2322: Type 'A' is not assignable to type 'B'.
  Property 'value' is missing in type 'A'.
tests/cases/compiler/chainedAssignment3.ts(19,5): error TS2322: Type 'A' is not assignable to type 'B'.


==== tests/cases/compiler/chainedAssignment3.ts (3 errors) ====
    class A {
        id: number;
    }
    
    class B extends A {
        value: string;
    }
    
    var a: A;
    var b: B;
    a = b = null;
    a = b = new B();
    b = a = new B();
    
    a.id = b.value = null;
    ~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    // error cases
    b = a = new A();
    ~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
!!! error TS2322:   Property 'value' is missing in type 'A'.
    a = b = new A();
        ~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
    
    
    